--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<title>{% if site.title == blank %}{{ site.title }}{% else %}{{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}{% endif %}{% if page.title and page.url != "/" %} | {{ page.title }}{% endif %}</title>
+<title>{% if site.title == blank %}{{ site.title }}{% else %}{{ site.first_name }} {{ site.last_name }}{% endif %}{% if page.title and page.url != "/" %} | {{ page.title }}{% endif %}</title>
 <meta name="description" content="{{ site.description }}">
 {% comment %}
 <meta name="keywords" content="{%- if page.keywords -%}{{ page.keywords }}{%- elsif page.description -%} {{ page.description | split: " " | uniq | join: ", "}}{%- else -%}{{ page.title | split: " " | join: ", " }}{%- endif -%}" />
@@ -10,6 +10,7 @@
 {% if page.keywords %}
 	<meta name="keywords" content="{{ page.keywords }}" />
 {% endif %}
+<meta name="google-site-verification" content="es8CThz5z5r6m9N7cnlabrX7dMEnnVAA40CZozcoyeg" />
 
 <!-- Open Graph -->
 {% if site.serve_og_meta %}
