--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,5 +33,6 @@ layout: default
     </script>
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
   {% endif %}
+  <script src="{{ '/assets/js/progress.js' | relative_url }}"></script>
 
 </div>
