Add OS projects

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -64,6 +64,14 @@
               </a>
             </div>
           {% endif %}
+		  
+		  <!-- Resume -->
+          <li class="nav-item">
+            <a class="nav-link" href="{{ site.baseurl }}/assets/pdf/pratulya-resume.pdf">
+              resume
+            </a>
+          </li>
+
         </ul>
       </div>
     </div>
