--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
 	<meta name="keywords" content="{{ page.keywords }}" />
 {% endif %}
 <meta name="google-site-verification" content="es8CThz5z5r6m9N7cnlabrX7dMEnnVAA40CZozcoyeg" />
+<meta name="robots" content="nofollow, noimageindex" />
 
 <!-- Open Graph -->
 {% if site.serve_og_meta %}
